RESOLVED FIXED281168
REGRESSION(283463@main?): [ Debug iOS iPad ] 61x TestWebKitAPI.DragAndDropTests*(api-tests) are constant asserts
https://bugs.webkit.org/show_bug.cgi?id=281168
Summary REGRESSION(283463@main?): [ Debug iOS iPad ] 61x TestWebKitAPI.DragAndDropTes...
Dawn Morningstar
Reported 2024-10-09 14:41:33 PDT
61x TestWebKitAPI.DragAndDropTests are constant asserts: TestWebKitAPI.DragAndDropTests.AdditionalItemsCanBePreventedOnDragStart TestWebKitAPI.DragAndDropTests.AdditionalLinkAndImageIntoContentEditable TestWebKitAPI.DragAndDropTests.BackgroundImageLinkToInput TestWebKitAPI.DragAndDropTests.CancelledLiftDoesNotCauseSubsequentDragsToFail TestWebKitAPI.DragAndDropTests.CanDragImageWhenNotFirstResponder TestWebKitAPI.DragAndDropTests.CanPreventOperation TestWebKitAPI.DragAndDropTests.CanPreventStart TestWebKitAPI.DragAndDropTests.CanStartDragOnDivWithDraggableAttribute TestWebKitAPI.DragAndDropTests.CanStartDragOnEnormousImage TestWebKitAPI.DragAndDropTests.CanStartDragOnModel TestWebKitAPI.DragAndDropTests.ColorInputEvents TestWebKitAPI.DragAndDropTests.ColorInputToColorInput TestWebKitAPI.DragAndDropTests.ColorInputToDisabledColorInput TestWebKitAPI.DragAndDropTests.ContentEditableMoveParagraphs TestWebKitAPI.DragAndDropTests.ContentEditableToContentEditable TestWebKitAPI.DragAndDropTests.ContentEditableToTextarea TestWebKitAPI.DragAndDropTests.DataTransferGetDataWhenDroppingCustomData TestWebKitAPI.DragAndDropTests.DataTransferGetDataWhenDroppingPlainText TestWebKitAPI.DragAndDropTests.DataTransferGetDataWhenDroppingURL TestWebKitAPI.DragAndDropTests.DataTransferSanitizeHTML TestWebKitAPI.DragAndDropTests.DataTransferSetDataCannotWritePlatformTypes TestWebKitAPI.DragAndDropTests.DataTransferSetDataInvalidURL TestWebKitAPI.DragAndDropTests.DataTransferSetDataUnescapedURL TestWebKitAPI.DragAndDropTests.DataTransferSetDataValidURL TestWebKitAPI.DragAndDropTests.DataTransferTypesOnDragStartForImage TestWebKitAPI.DragAndDropTests.DataTransferTypesOnDragStartForLink TestWebKitAPI.DragAndDropTests.DataTransferTypesOnDragStartForTextSelection TestWebKitAPI.DragAndDropTests.DisabledColorInputToColorInput TestWebKitAPI.DragAndDropTests.DoNotCrashWhenRemovingNodeOnDrop TestWebKitAPI.DragAndDropTests.DoNotCrashWhenSelectionIsClearedInDragStart TestWebKitAPI.DragAndDropTests.DoNotCrashWhenSelectionMovesOffscreenAfterDragStart TestWebKitAPI.DragAndDropTests.DoNotPerformSelectionDragWhenNotFirstResponder TestWebKitAPI.DragAndDropTests.DragElementWithImageOverlay TestWebKitAPI.DragAndDropTests.DragEventClientCoordinatesBasic TestWebKitAPI.DragAndDropTests.DragEventClientCoordinatesWithScrollOffset TestWebKitAPI.DragAndDropTests.DragEventPageCoordinatesBasic TestWebKitAPI.DragAndDropTests.DragEventPageCoordinatesWithScrollOffset TestWebKitAPI.DragAndDropTests.DragImageFromContentEditable TestWebKitAPI.DragAndDropTests.DragImageLocationForLinkInSubframe TestWebKitAPI.DragAndDropTests.DragLiftPreviewDataTransferSetDragImage TestWebKitAPI.DragAndDropTests.DragSelectedTextInImageOverlay TestWebKitAPI.DragAndDropTests.DropPreviewForImageInEditableArea TestWebKitAPI.DragAndDropTests.DropUserSelectAllUserDragElementDiv TestWebKitAPI.DragAndDropTests.EnterAndLeaveEvents TestWebKitAPI.DragAndDropTests.ImageDoesNotUseElementSizeAsEstimatedSize TestWebKitAPI.DragAndDropTests.ImageInLinkToInput TestWebKitAPI.DragAndDropTests.ImageInLinkWithoutHREFToInput TestWebKitAPI.DragAndDropTests.ImageToContentEditable TestWebKitAPI.DragAndDropTests.ImageToTextarea TestWebKitAPI.DragAndDropTests.InjectedBundleAttachmentElementData TestWebKitAPI.DragAndDropTests.InjectedBundleImageElementData TestWebKitAPI.DragAndDropTests.LargeImageToTargetDiv TestWebKitAPI.DragAndDropTests.LinkToInput TestWebKitAPI.DragAndDropTests.LinkWithEmptyHREF TestWebKitAPI.DragAndDropTests.NonEditableTextSelectionToTextarea TestWebKitAPI.DragAndDropTests.PreventingMouseDownShouldPreventDragStart TestWebKitAPI.DragAndDropTests.ReadOnlyColorInputToReadOnlyColorInput TestWebKitAPI.DragAndDropTests.SinglePlainTextURLTypeIdentifiers TestWebKitAPI.DragAndDropTests.SinglePlainTextWordTypeIdentifiers TestWebKitAPI.DragAndDropTests.TextAreaToInput TestWebKitAPI.DragAndDropTests.WebProcessTerminationDuringDrag TestWebKitAPI.DragAndDropTests.WebViewRemovedFromViewHierarchyDuringDrag HISTORY: https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.DragAndDropTests.AdditionalItemsCanBePreventedOnDragStart Test-run: https://build.webkit.org/#/builders/940/builds/2914 STDIO: https://build.webkit.org/#/builders/940/builds/2914/steps/18/logs/stdio ASSERT: TestWebKitAPI.DragAndDropTests.WebViewRemovedFromViewHierarchyDuringDrag 2024-10-09 11:01:35.735 com.apple.WebKit.WebContent[84879:5545854] CoreText note: Client requested name ".SFUI-Regular", it will get TimesNewRomanPSMT rather than the intended font. All system UI font access should be through proper APIs such as CTFontCreateUIFontForLanguage() or +[UIFont systemFontOfSize:]. 2024-10-09 11:01:35.735 com.apple.WebKit.WebContent[84879:5545854] CoreText note: Set a breakpoint on CTFontLogSystemFontNameRequest to debug. 2024-10-09 11:01:35.735 com.apple.WebKit.WebContent[84879:5545854] CoreText note: Client requested name ".SFUI-Regular", it will get TimesNewRomanPSMT rather than the intended font. All system UI font access should be through proper APIs such as CTFontCreateUIFontForLanguage() or +[UIFont systemFontOfSize:]. ASSERTION FAILED: interaction == _dragInteraction /Volumes/Data/worker/Apple-iOS-17-Simulator-Debug-Build/build/Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm(10650) : -[WKContentView(WKInteraction) dragInteraction:itemsForBeginningSession:] 1 0x346f6ccd8 -[WKContentView(WKInteraction) dragInteraction:itemsForBeginningSession:] 2 0x104e15654 -[DragAndDropSimulator _advanceProgress] 3 0x104e13c74 -[DragAndDropSimulator runFrom:to:additionalItemRequestLocations:]::$_1::operator()() const 4 0x104e13bfc __66-[DragAndDropSimulator runFrom:to:additionalItemRequestLocations:]_block_invoke.159 5 0x344df1f14 WTF::BlockPtr<bool ()>::operator()() const 6 0x346f6e794 -[WKContentView(WKInteraction) dragInteraction:prepareDragSession:completion:]::$_86::operator()() const 7 0x346f6e770 __78-[WKContentView(WKInteraction) dragInteraction:prepareDragSession:completion:]_block_invoke 8 0x3443507b8 WTF::BlockPtr<void ()>::operator()() const 9 0x346f68208 -[WKContentView(WKInteraction) _didHandleDragStartRequest:] 10 0x3450cc898 WebKit::PageClientImpl::didHandleDragStartRequest(bool) 11 0x34515d944 WebKit::WebPageProxy::didHandleDragStartRequest(bool) 12 0x346b883c8 auto void IPC::callMemberFunction<WebKit::WebPageProxy, WebKit::WebPageProxy, void (bool), std::__1::tuple<bool>>(WebKit::WebPageProxy*, void (WebKit::WebPageProxy::*)(bool), std::__1::tuple<bool>&&)::'lambda'(auto&&...)::operator()<bool>(auto&&...) const 13 0x346b88338 decltype(std::declval<WebKit::WebPageProxy>()(std::declval<bool>())) std::__1::__invoke[abi:sn170006]<void IPC::callMemberFunction<WebKit::WebPageProxy, WebKit::WebPageProxy, void (bool), std::__1::tuple<bool>>(WebKit::WebPageProxy*, void (WebKit::WebPageProxy::*)(bool), std::__1::tuple<bool>&&)::'lambda'(auto&&...), bool>(WebKit::WebPageProxy&&, bool&&) 14 0x346b8830c decltype(auto) std::__1::__apply_tuple_impl[abi:sn170006]<void IPC::callMemberFunction<WebKit::WebPageProxy, WebKit::WebPageProxy, void (bool), std::__1::tuple<bool>>(WebKit::WebPageProxy*, void (WebKit::WebPageProxy::*)(bool), std::__1::tuple<bool>&&)::'lambda'(auto&&...), std::__1::tuple<bool>, 0ul>(WebKit::WebPageProxy&&, WebKit::WebPageProxy&&, std::__1::__tuple_indices<0ul>) 15 0x346b882d0 decltype(auto) std::__1::apply[abi:sn170006]<void IPC::callMemberFunction<WebKit::WebPageProxy, WebKit::WebPageProxy, void (bool), std::__1::tuple<bool>>(WebKit::WebPageProxy*, void (WebKit::WebPageProxy::*)(bool), std::__1::tuple<bool>&&)::'lambda'(auto&&...), std::__1::tuple<bool>>(WebKit::WebPageProxy&&, WebKit::WebPageProxy&&) 16 0x346b882a4 void IPC::callMemberFunction<WebKit::WebPageProxy, WebKit::WebPageProxy, void (bool), std::__1::tuple<bool>>(WebKit::WebPageProxy*, void (WebKit::WebPageProxy::*)(bool), std::__1::tuple<bool>&&) 17 0x346b5f594 void IPC::handleMessage<Messages::WebPageProxy::DidHandleDragStartRequest, IPC::Connection, WebKit::WebPageProxy, WebKit::WebPageProxy, void (bool)>(IPC::Connection&, IPC::Decoder&, WebKit::WebPageProxy*, void (WebKit::WebPageProxy::*)(bool)) 18 0x346b539bc WebKit::WebPageProxy::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 19 0x34709e4ec IPC::MessageReceiverMap::dispatchMessage(IPC::Connection&, IPC::Decoder&) 20 0x345212c4c WebKit::AuxiliaryProcessProxy::dispatchMessage(IPC::Connection&, IPC::Decoder&) 21 0x345620674 WebKit::WebProcessProxy::dispatchMessage(IPC::Connection&, IPC::Decoder&) 22 0x346db6aa0 WebKit::WebProcessProxy::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 23 0x34706b734 IPC::Connection::dispatchMessage(IPC::Decoder&) 24 0x34706bb8c IPC::Connection::dispatchMessage(WTF::UniqueRef<IPC::Decoder>) 25 0x34706c2c0 IPC::Connection::dispatchIncomingMessages() 26 0x34708d658 IPC::Connection::enqueueIncomingMessage(WTF::UniqueRef<IPC::Decoder>)::$_16::operator()() const 27 0x34708d5b4 WTF::Detail::CallableWrapper<IPC::Connection::enqueueIncomingMessage(WTF::UniqueRef<IPC::Decoder>)::$_16, void>::call() 28 0x11e782404 WTF::Function<void ()>::operator()() const 29 0x11e842158 WTF::RunLoop::performWork() 30 0x11e846928 WTF::RunLoop::performWork(void*) 31 0x109649e48 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ Child process terminated with signal 5: Trace/BPT trap
Attachments
Radar WebKit Bug Importer
Comment 1 2024-10-09 14:42:01 PDT
Dawn Morningstar
Comment 2 2024-10-09 15:10:07 PDT
These fail on iPad specifically
Wenson Hsieh
Comment 3 2024-10-09 16:27:02 PDT
EWS
Comment 4 2024-10-09 20:53:48 PDT
Committed 284946@main (4b1807e408da): <https://commits.webkit.org/284946@main> Reviewed commits have been landed. Closing PR #34937 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.