Tools/TestWebKitAPI/ios/DragAndDropSimulatorIOS.mm
@@ -108,11 +108,6 @@ InteractionType *findInteractionOfType(UIView *view)
     return (id<BEDragInteractionDelegate>)self._dragDropInteractionView;
 }
 
-- (BEDragInteraction *)dragInteraction
-{
-    return findInteractionOfType<BEDragInteraction>(self._dragDropInteractionView);
-}
-
 #else
 
 - (id<UIDragInteractionDelegate>)dragInteractionDelegate
@@ -120,16 +115,16 @@ InteractionType *findInteractionOfType(UIView *view)
     return (id<UIDragInteractionDelegate>)self._dragDropInteractionView;
 }
 
-- (UIDragInteraction *)dragInteraction
-{
-    return findInteractionOfType<UIDragInteraction>(self._dragDropInteractionView);
-}
-
 #endif
 
 - (UIDropInteraction *)dropInteraction
 {
     return findInteractionOfType<UIDropInteraction>(self._dragDropInteractionView);
+}
+
+- (id)dragInteraction
+{
+    return findInteractionOfType<UIDragInteraction>(self._dragDropInteractionView);
 }
 
 @end
